--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "joi": "^17.1.1"
+    "helmet": "^4.0.0",
+    "joi": "^17.1.1",
+    "morgan": "^1.10.0"
   }
 }
